<resources>
    <string name="app_name">Doctor Point</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_a_free_account">Create a free account</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="haven_t_any_account">Haven\'t any account?</string>
    <string name="create_account_successfully">Create account successfully</string>
</resources>