<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/colorOnBackground"
        tools:context=".ui.SignInOrCreateAccountFragment">

        <ImageView
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_123sdp"
            app:srcCompat="@drawable/ic_logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_60sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_80sdp"
            android:fontFamily="@font/roboto"
            android:text="@string/create_a_free_account"
            android:textSize="@dimen/_24ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account_button"
            android:layout_width="@dimen/_240sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/create_an_account"
            android:layout_marginTop="@dimen/_34sdp"
            android:layout_gravity="center"
            android:textSize="@dimen/_16ssp"
            android:textAllCaps="false"
            android:padding="@dimen/_4sdp"
            app:cornerRadius="@dimen/_8sdp"
            android:elevation="@dimen/_16sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/_240sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:textSize="@dimen/_16ssp"
            android:textAllCaps="false"
            android:padding="@dimen/_4sdp"
            app:cornerRadius="@dimen/_8sdp"
            android:background="@color/background" />
    </LinearLayout>
</layout>